src/test/resources/validation/error/queryReturningInterfaceCollection/schema.graphqls
type Film implements Node @table {
  id: ID!
}

type Query {
  nodes(ids: [ID!]): [Node]
}
